--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
             position: relative;
         }
 
-        /* 숫자 애니메이션 관련 CSS는 그대로 유지 (전체 클릭 수 및 랭킹에 적용) */
         .digit-container {
             position: relative;
             overflow: hidden;
             height: 1.2em;
             display: inline-block;
-            vertical-align: top; /* 기준선 맞추기 */
+            vertical-align: top;
             line-height: 1.2;
             margin: 0;
             padding: 0;
             text-align: center;
-            width: 0.6em; /* 각 숫자의 너비 고정 */
+            width: 0.6em;
             box-sizing: border-box;
-            white-space: nowrap; /* 중요: 내부 공백 문제 방지 */
+            white-space: nowrap;
         }
 
         .digit-number {
@@ -42,7 +41,7 @@
             align-items: center;
             transition: transform 0.4s ease-in-out;
             line-height: 1.2;
-            white-space: nowrap; /* 중요: 숫자 자체의 공백 문제 방지 */
+            white-space: nowrap;
         }
 
         .digit-number.new { transform: translateY(100%); }
@@ -74,7 +73,6 @@
             font-weight: bold;
             margin-bottom: 10px;
             color: #d9534f;
-            /* Flexbox는 내 클릭 수에 애니메이션이 없으므로 필요 없을 수 있으나, 정렬 위해 유지 */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -82,7 +80,6 @@
         }
         #my-pops-display {
             line-height: 1.2;
-            /* 내 클릭 수는 애니메이션이 없으므로, digit-container 관련 스타일을 직접 적용하지 않음 */
         }
 
         #popcat-image { width: 300px; height: auto; cursor: pointer; transition: transform 0.05s ease; }
@@ -145,7 +142,7 @@
         // ----------------------------------------------------
         const catImage = document.getElementById('popcat-image');
         const myPopsDisplay = document.getElementById('my-pops-display');
-        const totalPopsValue = document.getElementById('total-pops-value'); // 이 요소에 애니메이션 적용
+        const totalPopsValue = document.getElementById('total-pops-value');
         const top10List = document.getElementById('top-10-list');
         const startScreen = document.getElementById('start-screen');
         const gameScreen = document.getElementById('game-screen');
@@ -177,7 +174,9 @@
                 startScreen.style.display = 'none';
                 gameScreen.style.display = 'block';
                 await loadMyPopsInitial();
-                resetActivityTimer(); // 게임 시작 시 활동 타이머 리셋
+                // 게임 시작 시에는 5초 폴링으로 시작하고 활동 타이머 리셋
+                setPollingToFast();
+                resetInactivityTimer();
             } else {
                 alert("ID를 입력해 주세요.");
             }
@@ -188,7 +187,6 @@
             try {
                 const doc = await db.collection("users").doc(currentUserId).get();
                 localPops = doc.exists ? Number(doc.data().pops) || 0 : 0;
-                // 내 클릭 수는 애니메이션 없음, 직접 textContent 업데이트
                 myPopsDisplay.textContent = localPops;
             } catch (err) {
                 console.error(`내 클릭 수 로드 에러:`, err);
@@ -196,33 +194,43 @@
         }
 
         // ----------------------------------------------------
-        // 4. 폴링 시작 (주기 변경 가능)
+        // 4. 폴링 제어 함수
         // ----------------------------------------------------
-        function startPolling(interval = currentPollingInterval) {
-            if (rankingsInterval) clearInterval(rankingsInterval); // 기존 타이머 중지
-            currentPollingInterval = interval; // 현재 폴링 주기 업데이트
+
+        // 폴링 주기를 설정하고 타이머를 다시 시작
+        function startPolling(interval) {
+            if (rankingsInterval) {
+                clearInterval(rankingsInterval);
+            }
+            currentPollingInterval = interval;
             rankingsInterval = setInterval(updateRankings, currentPollingInterval);
             updateRankings(); // 타이머 시작 시 즉시 실행
             console.log(`Polling started with interval: ${currentPollingInterval / 1000}s`);
         }
 
-        // 비활동 타이머 리셋 함수
-        function resetActivityTimer() {
-            if (activityCheckTimeout) clearTimeout(activityCheckTimeout);
-
-            // 20초 후 비활동 상태로 전환 (30초 폴링)
-            activityCheckTimeout = setTimeout(() => {
-                if (currentPollingInterval !== SLOW_POLLING_INTERVAL) {
-                    console.log("20초간 활동 없음. Polling interval changing to 30s.");
-                    startPolling(SLOW_POLLING_INTERVAL);
-                }
-            }, INACTIVITY_THRESHOLD);
-
-            // 활동 감지 시 5초 폴링 상태가 아니라면 5초 폴링으로 전환
+        // 빠른 폴링 (5초)으로 전환
+        function setPollingToFast() {
             if (currentPollingInterval !== FAST_POLLING_INTERVAL) {
-                console.log("Activity detected. Polling interval changing to 5s.");
                 startPolling(FAST_POLLING_INTERVAL);
             }
+        }
+
+        // 느린 폴링 (30초)으로 전환
+        function setPollingToSlow() {
+            if (currentPollingInterval !== SLOW_POLLING_INTERVAL) {
+                startPolling(SLOW_POLLING_INTERVAL);
+            }
+        }
+
+        // 비활동 감지 타이머 리셋
+        function resetInactivityTimer() {
+            if (activityCheckTimeout) {
+                clearTimeout(activityCheckTimeout);
+            }
+            activityCheckTimeout = setTimeout(() => {
+                console.log("20초간 활동 없음. Polling interval changing to 30s.");
+                setPollingToSlow(); // 20초 후 느린 폴링으로 전환
+            }, INACTIVITY_THRESHOLD);
         }
 
         // ----------------------------------------------------
@@ -237,7 +245,7 @@
 
             // 로컬 카운트 증가 (내 클릭 수는 애니메이션 없음)
             localPops++;
-            myPopsDisplay.textContent = localPops; // 직접 textContent 업데이트
+            myPopsDisplay.textContent = localPops;
 
             // Firestore 즉시 업데이트
             const userRef = db.collection("users").doc(currentUserId);
@@ -245,16 +253,16 @@
                 await userRef.set({
                     pops: firebase.firestore.FieldValue.increment(1)
                 }, { merge: true });
-                // console.log("Firestore updated immediately.");
             } catch (error) {
                 console.error("클릭 업데이트 실패:", error);
             }
 
-            // 활동 감지 및 타이머 리셋 (5초 폴링으로 전환)
-            resetActivityTimer();
+            // 클릭 발생 시 5초 폴링으로 전환하고 비활동 타이머 리셋
+            setPollingToFast();
+            resetInactivityTimer();
 
             // 즉시 순위 갱신 (더 빠른 반영)
-            //updateRankings();
+            updateRankings();
         }
 
         catImage.addEventListener('mousedown', handlePop);
@@ -354,7 +362,7 @@
 
                     const popSpan = document.createElement('span');
                     popSpan.id = popSpanId;
-                    popSpan.textContent = r.pops; // 초기값 설정
+                    popSpan.textContent = r.pops;
 
                     popWrapper.appendChild(popSpan);
                     li.appendChild(rankIdSpan);
@@ -372,7 +380,6 @@
 
                 li.querySelector('.rank-id').textContent = `${i + 1}. ${r.id}`;
                 if (popSpanToUpdate) {
-                    // 순위표는 애니메이션 적용
                     updateNumberSmooth(popSpanToUpdate, r.pops);
                 }
             });
@@ -391,23 +398,12 @@
                     .limit(10)
                     .get();
 
-                // 총 클릭 수 집계 (효율성 개선 필요 - 이전 피드백 참조)
                 const totalSnapshot = await db.collection("users").get();
                 totalSnapshot.docs.forEach(doc => {
                     totalPops += Number(doc.data().pops) || 0;
                 });
 
-                // totalPopsValue에 smooth 애니메이션 적용
-                updateNumberSmooth(totalPopsValue, totalPops); // <div id="total-pops-display">에 애니메이션 적용
-                // 주의: totalPopsValue는 <div>이므로, 이 안에 있는 텍스트 노드에 직접 애니메이션을 적용하려면
-                // <div id="total-pops-value" style="display:inline-block;">로딩 중...</div> 에 직접 숫자를 넣는 것이 아니라
-                // <div id="total-pops-display"><span id="total-pops-value">로딩 중...</span></div> 와 같이 하고
-                // updateNumberSmooth(totalPopsValue, totalPops)를 호출해야 합니다. 현재 구조상으로는 totalPopsValue가 div 그 자체입니다.
-                // 만약 <div id="total-pops-value"> 로딩 중... </div> 이라면,
-                // updateNumberSmooth(totalPopsValue, totalPops)는 div의 innerHTML을 변경합니다.
-                // 만약 <div id="total-pops-display"><div id="total-pops-value">로딩 중...</div></div> 라면
-                // updateNumberSmooth(totalPopsValue, totalPops)가 맞습니다. (기존 HTML 구조 확인)
-
+                updateNumberSmooth(totalPopsValue, totalPops);
                 snapshot.docs.forEach(doc => {
                     ranks.push({ id: doc.id, pops: Number(doc.data().pops) || 0 });
                 });
@@ -415,8 +411,7 @@
 
             } catch (err) {
                 console.error("Firestore 오류:", err);
-                // 오류 발생 시에도 smooth 애니메이션 적용 (0으로)
-                updateNumberSmooth(totalPopsValue, 0); // 대상 요소에 애니메이션 적용
+                updateNumberSmooth(totalPopsValue, 0);
                 if (top10List.children.length === 0) {
                     top10List.innerHTML = '<li>로딩 오류</li>';
                 }
