--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             resetInactivityTimer();
 
             // 즉시 순위 갱신 (더 빠른 반영)
-            updateRankings();
+            //updateRankings();
         }
 
         catImage.addEventListener('mousedown', handlePop);
@@ -428,3 +428,4 @@
     </script>
 </body>
 </html>
+
